@@ -6,13 +6,12 @@
 package require Tk 8.5
 package require snit
 
-source [file join [file dirname [info script]] bindDown.tcl]
-
-source [file join [file dirname [info script]] vertical_meter.tcl]
-source [file join [file dirname [info script]] led.tcl]
-source [file join [file dirname [info script]] rdial.tcl]
-source [file join [file dirname [info script]] tachometer.tcl]
-source [file join [file dirname [info script]] voltmeter.tcl]
-source [file join [file dirname [info script]] radioMatrix.tcl]
+package require bindDown
+package require meter
+package require led
+package require rdial
+package require tachometer
+package require voltmeter
+package require radioMatrix
 
 package provide controlwidget 0.1
