@@ -41,11 +41,12 @@
 # AND  THE  AUTHOR  AND  DISTRIBUTORS  HAVE  NO  OBLIGATION  TO  PROVIDE
 # MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.
 #
-# $Id: tachometer.tcl,v 1.3 2010/08/10 11:05:51 arjenmarkus Exp $
+# $Id: tachometer.tcl,v 1.4 2010/09/10 17:16:29 andreas_kupries Exp $
 #
 
 package require Tk  8.5
 package require snit
+package provide tachometer 0.1
 
 namespace eval controlwidget {
     namespace export tachometer
